compiler/test-data/parser/types/errors/asset_on_composite.frel
module test

scheme User {
    name: String
}

theme BadTheme {
    primary : asset User
}
